--- a/GeoQuiz/app/src/main/res/layout-land/content_quiz.xml
+++ b/GeoQuiz/app/src/main/res/layout-land/content_quiz.xml
@@ -31,11 +31,6 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="bottom|center_horizontal">
 
         <ImageButton
             android:id="@+id/prev_button"
@@ -43,7 +38,14 @@
             android:layout_height="wrap_content"
             android:src="@drawable/arrow_left"
             android:contentDescription="@string/prev_button"
-            />
+            android:layout_gravity="bottom|left"/>
+
+        <Button
+            android:id="@+id/cheat_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/cheat_button"
+            android:layout_gravity="bottom|center"/>
 
         <ImageButton
             android:id="@+id/next_button"
@@ -53,6 +55,6 @@
             android:contentDescription="@string/next_button"
             android:layout_gravity="bottom|right"/>
 
-    </LinearLayout>
+
 
 </FrameLayout>
