chapter 15 challenge Another Implicit intent is almost done

--- a/CriminalIntent/app/src/main/res/layout-land/fragment_crime.xml
+++ b/CriminalIntent/app/src/main/res/layout-land/fragment_crime.xml
@@ -64,6 +64,13 @@
             android:layout_weight="1"
             android:text="@string/crime_report"/>
 
+        <Button
+            android:id="@+id/crime_call"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/crime_call"/>
+
     </LinearLayout>
 
 </LinearLayout>
