--- a/CriminalIntent/app/src/main/res/layout-land/fragment_crime.xml
+++ b/CriminalIntent/app/src/main/res/layout-land/fragment_crime.xml
@@ -16,11 +16,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp">
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp">
 
     <Button
         android:id="@+id/crime_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"/>
+
+    <Button
+        android:id="@+id/crime_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"/>
