--- a/BeatBox/app/src/main/res/layout/list_item_sound.xml
+++ b/BeatBox/app/src/main/res/layout/list_item_sound.xml
@@ -6,8 +6,8 @@
     android:layout_width="wrap_content"
     android:layout_margin="8dp">
     <Button android:id="@+id/list_item_sound_button"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
             tools:text="Sound name" />    
 </FrameLayout>
